--- a/senguo.cc/admin/templates/admin/discount-new.html
+++ b/senguo.cc/admin/templates/admin/discount-new.html
@@ -104,12 +104,12 @@
                     <td>开始时间 </td>
                     <td>
                         <div class=""> 
-                             <div class="dropdown slide-down-select w130 mr10 time-btn-width">
+                             <div class="dropdown slide-down-select w50 mr10 time-btn-width">
                                 <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" data-toggle="dropdown">
                                     <em class="pull-left c333 f-hour" data-id="0" >0</em>
                                     <span class="caret pull-right no-margin-left rotate0"></span>
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-right w130 f-discount-hour-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
+                                <ul class="dropdown-menu dropdown-menu-right w50 f-discount-hour-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
                                     {%for x in range(0,24)%}
                                     <li class="presentation" role="presentation">
                                         <a class="item" href="javascript:;" data-id={{x}} >{{x}}</a>
@@ -117,12 +117,12 @@
                                     {%end%}
                                 </ul>
                             </div><span class="text-below">时</span>
-                             <div class="dropdown slide-down-select w130 mr10 time-btn-width">
+                             <div class="dropdown slide-down-select w50 mr10 time-btn-width">
                                 <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" data-toggle="dropdown">
                                     <em class="pull-left c333 f-minute" data-id="0" >0</em>
                                     <span class="caret pull-right no-margin-left rotate0"></span>
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-right w130 f-discount-minute-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
+                                <ul class="dropdown-menu dropdown-menu-right w50 f-discount-minute-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
                                    {%for x in range(0,60)%}
                                     <li class="presentation" role="presentation">
                                         <a class="item" href="javascript:;" data-id={{x}} >{{x}}</a>
@@ -130,12 +130,12 @@
                                     {%end%}
                                 </ul>
                             </div><span class="text-below">分</span>
-                             <div class="dropdown slide-down-select w130 mr10 time-btn-width">
+                             <div class="dropdown slide-down-select w50 mr10 time-btn-width">
                                 <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" data-toggle="dropdown">
                                     <em class="pull-left c333 f-second" data-id="0" >0</em>
                                     <span class="caret pull-right no-margin-left rotate0"></span>
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-right w130 f-discount-second-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
+                                <ul class="dropdown-menu dropdown-menu-right w50 f-discount-second-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
                                      {%for x in range(0,60)%}
                                     <li class="presentation" role="presentation">
                                         <a class="item" href="javascript:;" data-id={{x}} >{{x}}</a>
@@ -151,12 +151,12 @@
                     <td class="text-below">结束时间 </td>
                     <td>
                         <div class="">
-                             <div class="dropdown slide-down-select w130 mr10 time-btn-width">
+                             <div class="dropdown slide-down-select w50 mr10 time-btn-width">
                                 <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" data-toggle="dropdown">
                                     <em class="pull-left c333 t-hour" data-id="23" >23</em>
                                     <span class="caret pull-right no-margin-left rotate0"></span>
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-right w130 t-discount-hour-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
+                                <ul class="dropdown-menu dropdown-menu-right w50 t-discount-hour-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
                                     {%for x in range(0,24)%}
                                     <li class="presentation" role="presentation">
                                         <a class="item" href="javascript:;" data-id={{x}} >{{x}}</a>
@@ -164,12 +164,12 @@
                                     {%end%}
                                 </ul>
                             </div><span class="text-below">时</span>
-                             <div class="dropdown slide-down-select w130 mr10 time-btn-width">
+                             <div class="dropdown slide-down-select w50 mr10 time-btn-width">
                                 <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" data-toggle="dropdown">
                                     <em class="pull-left c333 t-minute" data-id="59" >59</em>
                                     <span class="caret pull-right no-margin-left rotate0"></span>
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-right w130 t-discount-minute-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
+                                <ul class="dropdown-menu dropdown-menu-right w50 t-discount-minute-items time-btn-width scroll-bar-discount" role="menu" aria-labelledby="dropdownMenu18">
                                    {%for x in range(0,60)%}
                                     <li class="presentation" role="presentation">
                                         <a class="item" href="javascript:;" data-id={{x}} >{{x}}</a>
@@ -177,12 +177,12 @@
                                     {%end%}
                                 </ul>
                             </div><span class="text-below">分</span>
-                             <div class="dropdown slide-down-select w130 mr10 time-btn-width">
+                             <div class="dropdown slide-down-select w50 mr10 time-btn-width">
                                 <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" data-toggle="dropdown">
                                     <em class="pull-left c333 t-second" data-id="59" >59</em>
                                     <span class="caret pull-right no-margin-left rotate0"></span>
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-right w130 t-discount-second-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
+                                <ul class="dropdown-menu dropdown-menu-right w50 t-discount-second-items time-btn-width scroll-bar-discount" role="menu" aria-labelledby="dropdownMenu18">
                                      {%for x in range(0,60)%}
                                     <li class="presentation" role="presentation">
                                         <a class="item" href="javascript:;" data-id={{x}} >{{x}}</a>
@@ -241,7 +241,7 @@
                             </tr>
                             <tr class="no_border">
                                 <td>
-                                   活动折扣<input type="text" class="discount_rate"><span>折</span>
+                                   活动折扣<input type="text" class="discount_rate"><span>折(1-10之间)</span>
                                 </td>
                             </tr>
                         </table>
