--- a/senguo.cc/admin/templates/admin/discount-detail.html
+++ b/senguo.cc/admin/templates/admin/discount-detail.html
@@ -33,7 +33,7 @@
         {% end %}
         </tbody>
     </table>
-    <div class="users-pagination list-pagination group pull-right mt0 cm_jump">
+    <!-- <div class="users-pagination list-pagination group pull-right mt0 cm_jump">
         <ul>
             <li><a href="javascript:;" class="page-btn pre-page pre-page-detail">&nbsp;</a></li>
             <li>
@@ -43,7 +43,7 @@
             <li><input class="input-page form-control" type="text" placeholder="输入页码"></li>
             <li><a href="javascript:;" class="jump-to jmp-detail">跳转</a></li>
         </ul>
-    </div>
+    </div> -->
 </div>
 <div id="noresult">
     <h4 class="text-center" id="text"></h4>
