--- a/senguo.cc/admin/templates/customer/home.html
+++ b/senguo.cc/admin/templates/customer/home.html
@@ -39,7 +39,7 @@
                 <div class="pagination"></div>
             </div>
             {% else %}
-            <img src="/static/images/banner.png" class="default-img img"/>
+            <img src="/static/images/banner.png" class="default-img img" alt="推荐商品图片"/>
             {% end %}
         </div>
         <div class="no-mar-btom top-title">
