--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -125,7 +125,7 @@
 .status-goods{position: absolute;width: 46px;height: 46px;display: inline-block;background-repeat: no-repeat;background-size: 46px;top: 2px;left: 2px;}
 .status-seckill{background-image: url('/static/images/status_seckill.png');}
 .status-discount{background-image: url('/static/images/status_discount.png');}
-.seckill-btn{width: 60px;height: 28px;line-height: 28px;float:right;text-align: center;color: #fff;font-weight: bold;border-radius: 4px;background-color: #FF9800;}
+.seckill-btn{width: 60px;height: 28px;line-height: 28px;float:right;cursor:pointer;text-align: center;color: #fff;font-weight: bold;border-radius: 4px;background-color: #FF9800;}
 .seckill-btn-yes{background-color: #ddd;}
 .price-bo{color: #59D5AA;margin-right: 4px;cursor: pointer;}
 .price-tip{display: inline-block;color: #FF9800;cursor: pointer;padding: 0 4px;border-radius: 12px;border: 1px solid #ff9800;font-size: 12px;height: 18px;line-height: 16px;}
@@ -154,11 +154,11 @@
 .goods-img-box img{width: 100%;min-height: 130px;border-top-left-radius: 6px;border-top-right-radius: 6px;-webkit-user-select:none;}
 .status-tip{position:absolute;width:45px;height:45px;top:15px;left:15px;background-size: 45px;background-repeat: no-repeat;background-position:center center;}
 .goods-img-hover{position:absolute;z-index:10;width:100%;height:100%;top:0}
-.status-tip{position:absolute;width:50px;height:50px;top:15px;left:15px;background-size: 50px;background-repeat: no-repeat;background-position:center center;}
 .tag2{background-image: url("/static/images/tag2.png");}
 .tag3{background-image: url("/static/images/tag3.png");}
 .tag4{background-image: url("/static/images/tag4.png");}
 .tag5{background-image: url("/static/images/tag5.png");}
+.tag6{background-image: url("/static/images/tag6.png");}
 .goods-attr-box{position: relative;padding: 11px 6px;background:#fff;border-bottom-left-radius:6px;border-bottom-right-radius:6px;min-height:70px;}
 .attr-left{padding-right: 140px;}
 .attr-left .g-name{color: #333;font-size: 16px;font-weight: bold;}
