--- a/senguo.cc/admin/templates/beauty/home.html
+++ b/senguo.cc/admin/templates/beauty/home.html
@@ -11,6 +11,7 @@
 <script>
     window.dataObj.notices = {% raw json.dumps(context["notices"]) %}
     window.dataObj.cart_fs = {% raw json.dumps(context["cart_fs"]) %}
+    var seckill_goods_ids= {% raw json.dumps(context["seckill_goods_ids"]) %}
 </script>
 <input type="hidden" id="shop_status" value="{{context['shop_status']}}"/>
 <input type="hidden" id="if_focus" value="{{context['w_follow']}}"/>
@@ -24,7 +25,7 @@
             <div class="swiper-wrapper">
                 {% if notices %}
                     {% for notice in notices%}
-                    <div class="swiper-slide item">
+                    <div class="swiper-slide item notice-item" data-url="{% if notice[3]==1 %}/seckill/{{handler.shop_code}}{% elif notice[3]==2 %}/discount/{{handler.shop_code}}?action=detail{% end %}">
                         <img src="{{notice[2] or '/static/images/holder_fruit.jpg'}}?imageView2/1/w/800/h/368" alt="推荐商品图片"/>
                         <p class="notice-title">{{notice[0]}}</p>
                     </div>
