--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -126,7 +126,7 @@
 .status-seckill{background-image: url('/static/images/status_seckill.png');}
 .status-discount{background-image: url('/static/images/status_discount.png');}
 .seckill-btn{width: 60px;height: 28px;line-height: 28px;float:right;cursor:pointer;text-align: center;color: #fff;font-weight: bold;border-radius: 4px;background-color: #FF9800;}
-.seckill-btn-yes{background-color: #ddd;}
+.seckill-btn-yes{background-color: #ddd !important;}
 .price-bo{color: #59D5AA;margin-right: 4px;cursor: pointer;}
 .price-tip{display: inline-block;color: #FF9800;cursor: pointer;padding: 0 4px;border-radius: 12px;border: 1px solid #ff9800;font-size: 12px;height: 18px;line-height: 16px;}
 .wrap-seckill-price{position: absolute;top: 4px;right: -20px;}
@@ -152,7 +152,7 @@
 .bingo-list>li{border:1px solid rgba(99,197,162,.6);border-radius: 6px;margin-bottom: 10px;position:relative;}
 .goods-img-box{min-height: 130px;max-height: 160px;overflow: hidden;position: relative;}
 .goods-img-box img{width: 100%;min-height: 130px;border-top-left-radius: 6px;border-top-right-radius: 6px;-webkit-user-select:none;}
-.status-tip{position:absolute;width:45px;height:45px;top:15px;left:15px;background-size: 45px;background-repeat: no-repeat;background-position:center center;}
+.status-tip{position:absolute;width:45px;height:45px;top:15px;left:15px;background-size: 45px;background-repeat: no-repeat;background-position:center center;border-radius: 4px;}
 .goods-img-hover{position:absolute;z-index:10;width:100%;height:100%;top:0}
 .tag2{background-image: url("/static/images/tag2.png");}
 .tag3{background-image: url("/static/images/tag3.png");}
@@ -193,8 +193,7 @@
 .more-group>li:last-child{border-bottom: none;}
 .desaturate{color:#ccc;}
 .desaturate .wrap-operate .roll-btn{background-color:#ccc;}
-
-
+.seckill-goods{background-color: #FF9800 !important;}
 
 
 
