admin set buylimit

--- a/senguo.cc/admin/static/m-admin/css/main.css
+++ b/senguo.cc/admin/static/m-admin/css/main.css
@@ -202,6 +202,7 @@
 .pop-spread .code2-logo{margin-top: 54px;}
 .shop-item-name{display: inline-block;max-width: 100px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;vertical-align: middle;}
 .notice{text-align: center;font-size: 12px;color: #bbb;padding-top: 15px;text-shadow: 1px 1px 0 #fdfdfd;}
+.tit{padding:10px;font-size:16px;color:#48B6A4;background-color:#fff;text-align:center;}
 /*店铺设置*/
 .list-title{padding-left: 10px;color: #666;font-size: 14px;line-height: 28px;}
 .data-list{background-color: #fff;padding-left: 10px;}
@@ -376,7 +377,7 @@
 .add-list{padding: 0 10px;background-color: #fff;}
 .add-list>li{color: #666;}
 .add-row{position: relative;height: 38px;padding-left: 60px;}
-.high-row{display: inline-block;width: 232px;left: 50%;-webkit-transform:translate(-50%,0);}
+.high-row{display: inline-block;width: 250px;left: 50%;-webkit-transform:translate(-50%,0);}
 .add-left{position: absolute;display: inline-block;width: 60px;height: 38px;line-height: 38px;color: #9f9f9f;left:0;top: 0;}
 .add-right{-webkit-box-sizing: border-box;height: 38px;line-height:38px;display: block;padding-right: 12px;padding-left:4px;color: #999;background: url('/static/images/arr-right.png') no-repeat right center;background-size: 8px 14px;}
 .add-ipt{width: 100%;-webkit-box-sizing: border-box;height: 34px;color: #333;border: none;background-color: #fff;padding-left: 0;margin-left: 0;vertical-align: 0.5px;}
