--- a/senguo.cc/admin/static/css/admin-goods.css
+++ b/senguo.cc/admin/static/css/admin-goods.css
@@ -155,6 +155,9 @@ textarea{border-color:#eee;padding: 2px 5px;}
 .tag-item{display:inline-block;width:70px;text-align:center;border:1px solid #ddd;}
 .tag-item.active{border-color:#44b549;color:#44b549;}
 .tag-item:hover{cursor:pointer;}
+.buylimit-item{display:inline-block;min-width:70px;padding:0 5px;text-align:center;border:1px solid #ddd;}
+.buylimit-item.active{border-color:#44b549;color:#44b549;}
+.buylimit-item:hover{cursor:pointer;}
 .pop-preview .detail-preview{width: 800px;height: 420px;overflow-y: auto;background: #fff;padding: 10px;}
 .pop-preview .title{width: 800px;height:30px;}
 /*导入商品*/
