--- a/senguo.cc/admin/templates/m-admin/goods-edit.html
+++ b/senguo.cc/admin/templates/m-admin/goods-edit.html
@@ -142,12 +142,25 @@
                 <div class="add-row high-row">
                     <span class="add-left">商品标签</span>
                     <span class="add-right nodownm">
-                        <div class="wrap-mark-set" data-id="{{data['tag']}}">
+                        <div class="wrap-mark-set wrap-tag" data-id="{{data['tag']}}">
                             <span class="mark-choose w24" data-id="1">无</span>
                             <span class="mark-choose" data-id="2">限时折扣</span>
                             <span class="mark-choose" data-id="3">热卖中</span>
                             <span class="mark-choose" data-id="4">今日特价</span>
                             <span class="mark-choose" data-id="5">新品</span>
+                        </div>
+                    </span>
+                </div>
+            </li>
+             <li>
+                <div class="add-row high-row">
+                    <span class="add-left">购买权限</span>
+                    <span class="add-right nodownm">
+                        <div class="wrap-mark-set wrap-buylimit" data-id="{{data['buylimit']}}">
+                            <span class="mark-choose w24" data-id="0">无</span>
+                            <span class="mark-choose" data-id="1">仅限新用户</span>
+                            <span class="mark-choose" data-id="2">仅限老用户</span>
+                            <span class="mark-choose" data-id="3">仅限充值用户</span>
                         </div>
                     </span>
                 </div>
