--- a/senguo.cc/admin/templates/m-admin/shop-list.html
+++ b/senguo.cc/admin/templates/m-admin/shop-list.html
@@ -6,12 +6,13 @@
 <div class="header">
     <a href="javascript:;" class="back goback">返回</a>
     <span>店铺列表</span>
-    {% if handler.current_shop and handler.current_shop.admin_id == current_user.id %}<a href="javascrpt:;" class="head-right spread-list">分享店铺</a>{% end %}
+    {% if handler.current_shop and handler.current_shop.admin_id == current_user.id %}<a href="javascript:;" class="head-right spread-list">分享店铺</a>{% end %}
 
 </div>
 {% end %}
 {% block content %}
 <div class="wrap-shop-list pb45">
+    <p class="font14 tit"><span class="font14">我创建的店铺</span> {% if not context['super_admin'] %}(您还不是卖家，无法创建您自己的店铺){% end %}</p>
     <ul class="shop-list">
         {% if context['shop_list'] %}
         {% for shop in  context['shop_list']%}
@@ -40,7 +41,41 @@
         {% end %}
         {% end %}
     </ul>
-    <a href="{{reverse_url('CreateShop')}}" class="create-btn create-shop">+创建店铺</a>
+    {% if context['super_admin'] %}
+    <a href="{{reverse_url('CreateShop')}}" class="create-btn create-shop mb20">+创建店铺</a>
+    {% else %}
+    <a href="{{reverse_url('ApplyLogin')}}" class="create-btn create-shop mb20">申请成为卖家</a>
+    {% end %}
+    
+    <p class="font14 tit">我管理的店铺</p>
+    <ul class="shop-list">
+        {% if context['other_shop_list'] %}
+        {% for shop in  context['other_shop_list']%}
+            <li data-id="{{shop['id']}}" data-code="{{shop['shop_code']}}">
+                <div class="sw-tip shop_status" data-status="{{shop['status']}}"><div class="sw-tip-filler"></div></div>
+                <span class="sw-tip-txt"></span>
+                <dl class="shop-dl">
+                    <dd>
+                        <span class="img-border"><img src="{{shop['shop_trademark_url'] or '/static/images/TDSG.png'}}?imageView2/1/w/100/h/100" alt="{{shop['shop_name']}}"/></span>
+                    </dd>
+                    <dt>
+                        <i class="arr-item"></i>
+                        <p class="name"><span class="shop-item-name">{{shop['shop_name']}}</span><span class="shop-cert auths hide" data-auth="{{shop['shop_auth']}}"></span></p>
+                        <p class="addre mt6">{{shop['address']}}</p>
+                        <ul class="shop-prop group mt6">
+                            <li>商品<span>{{shop['goods_count']}}</span>件</li>
+                            <li>评价<span>{{shop['comment_count']}}</span>条</li>
+                            <li>满意度<span>{{shop['satisfy']}}</span></li>
+                            <li>粉丝<span>{{shop['fans_sum']}}</span>个</li>
+                            <li>订单<span>{{shop['order_sum']}}</span>个</li>
+                            <li>营业额<span>{{shop['total_money'] or 0}}</span>元</li>
+                        </ul>
+                    </dt>
+                </dl>
+            </li>
+        {% end %}
+        {% end %}
+    </ul>
     <p class="notice">创建新的店铺后请先在电脑上登录管理后台：<br>senguo.cc/admin 进行店铺认证</p>
 </div>
 {% end %}
