--- a/senguo.cc/admin/static/css/admin-marketing.css
+++ b/senguo.cc/admin/static/css/admin-marketing.css
@@ -120,7 +120,7 @@ tr{border-left:1px solid #eee;border-right:1px solid #eee;border-bottom:1px soli
 .back_gray1{background: #ccc;color: #000}
 .discount_delete{margin-left: 420px;}
 .wrap-discounttb{background-color: #f4f5f9;-webkit-box-sizing: border-box;padding: 15px 0 20px 20px;}
-.discount-detail{width: 700px;margin-left: 100px;}
+/*.discount-detail{width: 700px;margin-left: 100px;}*/
 .no_border{border: 0px;background-color: #fff;}
 .discount_rate{margin-left: 25px}
 .use_group{margin-left: 10px}
