--- a/senguo.cc/admin/templates/admin/seckill.html
+++ b/senguo.cc/admin/templates/admin/seckill.html
@@ -16,22 +16,21 @@
                </div>
 </div>
 
-<div class="category-list mt50 seckill-manage">
+<div class="category-list mt10 seckill-manage">
                <div>
                              <span class="c999">商品秒杀</span>
                              <span class="c333"> / 秒杀管理</span>
-                             <span class="wrap-newbtn">
-                                           <a href="{{reverse_url('adminMarketingSeckill')}}?action=seckill_new" class="newbtn add-btn  mt6 mr10 new-seckill">+新建秒杀</a>
-                             </span>
                </div>
                <div class="subnav-box group mt20">
-                             <ul class="status-choose subnav chinav furit-type pull-left">
-                                           <li class="txt-center active nostart" data-type="nostart"><a href="javascript:;">未开始</a></li>
-                                           <li class="txt-center killing" data-type="killing"><a href="javascript:;">进行中</a></li>
-                                           <li class="txt-center finished" data-type="finished"><a href="javascript:;">已结束</a></li>
-                                           <li class="txt-center stoped" data-type="stoped"><a href="javascript:;">已停用</a></li>
-                             </ul>
-                             
+                   <div class="wrap-newbtn fr">
+                        <a href="{{reverse_url('adminMarketingSeckill')}}?action=seckill_new" class="newbtn add-btn  mt6 mr10 new-seckill">+新建秒杀</a>
+                   </div>
+                 <ul class="status-choose subnav chinav furit-type pull-left">
+                               <li class="txt-center active nostart" data-type="nostart"><a href="javascript:;">未开始</a></li>
+                               <li class="txt-center killing" data-type="killing"><a href="javascript:;">进行中</a></li>
+                               <li class="txt-center finished" data-type="finished"><a href="javascript:;">已结束</a></li>
+                               <li class="txt-center stoped" data-type="stoped"><a href="javascript:;">已停用</a></li>
+                 </ul>
                </div>　　　　
                <div class="wrap-tb mt10">
                              <table class="tb-enty tb-active">
