--- a/senguo.cc/admin/templates/superAdmin/count-order.html
+++ b/senguo.cc/admin/templates/superAdmin/count-order.html
@@ -1,25 +1,50 @@
 {% extends 'count-base.html' %}
 {% block title%}订单统计{% end %}
+{% block head %}<link rel="stylesheet" href="{{static_url('css/admin-count.css')}}"/>{% end %}
 {% block count %}
 <div class="box admin-right pull-right">
     <div id="order_trend" style="height:0" class="clearfix"></div>
 
     <p class="tit fs16">下单时间统计</p>
-
-    <div class="change-box">
-        <ul id="order_time_change" class="change-list pull-left">
-            <li data-id="1"><a href="javascript:;" class="text-grey3">累计数据/个</a></li>
-            <li data-id="2"><a href="javascript:;" class="text-grey3">昨日数据/个</a></li>
+    <div class="choose-change1 center-block fs16 txt-center hidden">
+                <a href="javascript:;" class="pre-item1 text-grey2"> < </a>
+                 <span class="choose-time">
+                     <span class="year-span1"><span class="year1"></span>年</span>
+                     <span class="month-span1"><span class="month1"></span>月</span>
+                     <span class="date-span1"><span class="date1"></span>日</span>
+                     <span class="week-span1 hidden"><span class="week-month1"></span>月<span class="week-date1"></span>日~<span class="week-month1-2"></span>月<span class="week-date1-2"></span>日</span>
+                 </span>
+                 <a href="javascript:;" class="next-item1 text-grey2"> > </a>
+    </div>
+    <div class="change-box mb55">　　
+        <ul id="sell_way_change" class="sell-change-list1 pull-left">
+                    <li><a href="javascript:;" class="sort-date1 text-grey3">按天排</a></li>
+                    <li><a href="javascript:;" class="sort-week1 text-grey3">按周排</a></li>
+                    <li><a href="javascript:;" class="sort-month1 text-grey3">按月排</a></li>
+                    <li><a href="javascript:;" class="sort-all1 text-grey3">历史累计数据</a></li>
         </ul>
     </div>
+
     <div id="order_time" style="height:400px"  class="clearfix"></div>
 
     <hr class="clearfix"/>
     <p class="tit fs16">送达时间统计</p>
-    <div class="change-box">
-        <ul id="receive_time_change" class="change-list pull-left">
-            <li data-id="1"><a href="javascript:;" class="text-grey3">累计数据/个</a></li>
-            <li data-id="2"><a href="javascript:;" class="text-grey3">昨日数据/个</a></li>
+    <div class="choose-change2 center-block font18 txt-center hidden">
+        <a href="javascript:;" class="pre-item2 text-grey2"> < </a>
+                 <span class="choose-time fs16">
+                     <span class="year-span2"><span class="year2"></span>年</span>
+                     <span class="month-span2"><span class="month2"></span>月</span>
+                     <span class="date-span2"><span class="date2"></span>日</span>
+                     <span class="week-span2 hidden"><span class="week-month2"></span>月<span class="week-date2"></span>日~<span class="week-month2-2"></span>月<span class="week-date2-2"></span>日</span>
+                 </span>
+                 <a href="javascript:;" class="next-item2 text-grey2"> > </a>
+    </div>
+    <div class="change-box mb55">　　
+        <ul id="sell_way_change" class="sell-change-list2 pull-left">
+                    <li><a href="javascript:;" class="sort-date2 text-grey3">按天排</a></li>
+                    <li><a href="javascript:;" class="sort-week2 text-grey3">按周排</a></li>
+                    <li><a href="javascript:;" class="sort-month2 text-grey3">按月排</a></li>
+                    <li><a href="javascript:;" class="sort-all2 text-grey3">历史累计数据</a></li>
         </ul>
     </div>
     <div id="receive_time" style="height:400px"  class="clearfix"></div>
@@ -28,6 +53,5 @@
 {% block bottom %}  
 <script src="/static/js/echarts.js"></script>
 <script src="{{static_url('js/superadmin-count_order.js')}}"></script>
-
 {% end %}
 
