--- a/senguo.cc/admin/static/css/market-goods.css
+++ b/senguo.cc/admin/static/css/market-goods.css
@@ -71,7 +71,7 @@ table{width: 100%;border-collapse: collapse;table-layout: fixed;}
 .cart-bg .move-cart{width: 30px;height: 30px;top: -110px;right:100px;line-height: 30px;text-align: center;opacity: 0;-webkit-transition:none;}
 .wrap-goods-info{padding: 10px;}
 .goods-title{font-size: 18px;color: #333;margin-bottom: 5px;width: 64%;display: inline-block;}
-.goods-info{font-size: 14px;color: #999;line-height: 18px;}
+.goods-info{font-size: 14px;color: #999;line-height: 18px;margin-top:5px;}
 .goods-num{font-size: 14px;margin-top: 8px;text-align: right;color: #999;float: right;width: 36%;display: inline-block;}
 .goods-num .zan{display: inline-block;cursor:pointer;margin-right: 4px;height: 11px;width: 12px;background-image: url('/static/images/heart.png');background-repeat: no-repeat;background-size: 23px;background-position: 1px 0;}
 .goods-num .zaned{background-image: url('/static/images/heart.png');background-size: 23px;background-position: -12px 0;}
@@ -100,6 +100,8 @@ table{width: 100%;border-collapse: collapse;table-layout: fixed;}
 .comment-lst .com-top>img{width: 20px;height: 20px;border-radius: 50%;margin-right: 2px;margin-top: -2px;}
 .comment-lst .name{color: #333;font-size: 14px;}
 .comment-lst .com-txt{font-size: 14px;line-height: 18px;color: #999;}
-.goods-tag{display: inline-block;font-size: 12px;color: #fec306;width: 60px;height: 16px;line-height: 14px;text-align: center;border-radius: 4px;margin-left: 4px;border: 1px solid #fec306;}
+.goods-tag{display: inline-block;font-size: 12px;color: #fec306;width:80px;height: 16px;line-height: 14px;text-align: center;border-radius: 4px;margin-left: 4px;border: 1px solid #fec306;}
 .market-price{text-decoration:line-through;}
 .goods-info-lst{padding-bottom:50px;}
+
+
