--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -8,7 +8,7 @@
 .goods-list-item .goods-img a{width:100%;overflow:hidden;padding:2px;}
 .goods-list-item .goods-img img{width:85px;height:85px;}
 .goods-list-item .goods-info{width:100%;z-index:10;padding-left:95px !important;overflow:hidden;}
-.goods-list-item .great-number{margin-bottom:0;line-height:35px;}
+.goods-list-item .great-number{margin-bottom:0;line-height:26px;}
 .goods-list-item .great-number em{background:url('../svg/icon_list-2.png') no-repeat 0 center;display:inline-block;width:10px;height:10px;background-size:140px 180px;}
 .goods-list-item .great-number .gray-heart{background-position:-70px -80px;}
 .goods-list-item .great-number .red-heart{background-position:-70px -70px !important;}
@@ -185,7 +185,8 @@
 .more-group>li:last-child{border-bottom: none;}
 .desaturate{color:#ccc;}
 .desaturate .wrap-operate .roll-btn{background-color:#ccc;}
-
+.buylimit{display:inline-block;font-size: 12px;color: #72D6B3;width:80px;height: 16px;line-height: 14px;text-align: center;border-radius: 4px;margin-right: 4px;border: 1px solid #72D6B3;}
+.goods-list-item .buylimit{margin-top:5px;color:#fec306;border-color:#fec306;}
 
 
 
