--- a/senguo.cc/admin/templates/admin/discount-main.html
+++ b/senguo.cc/admin/templates/admin/discount-main.html
@@ -71,13 +71,13 @@
                             </div>
                             <p class="er-text">限时折扣活动链接</p>
                             <div class="wrap-ipt">
-                                <input type="text" class="sw-link-txt" value="http://senguo.cc/discount/{{shop_code}}?action=detail" disabled="">
+                                <input type="text" class="sw-link-txt" value="http://i.senguo.cc/discount/{{shop_code}}?action=detail" disabled="">
                                 <input type="button" class="sw-link-copy" value="复制链接">
                             </div>
                             <div class="wrap-er group">
                                 <img class="er-logo" src="/static/images/favicon.ico" alt="">
                                 <div class="er-text lh80 fl">链接二维码</div>
-                                <div class="er-img fl er-code-img" title="http://senguo.cc/discount/{{shop_code}}?action=detail"></div>
+                                <div class="er-img fl er-code-img" title="http://i.senguo.cc/discount/{{shop_code}}?action=detail"></div>
                             </div>
                         </div>
                     </td>
@@ -124,13 +124,13 @@
                             </div>
                             <p class="er-text">限时折扣活动链接</p>
                             <div class="wrap-ipt">
-                                <input type="text" class="sw-link-txt" value="http://senguo.cc/discount/{{shop_code}}?action=detail" disabled="">
+                                <input type="text" class="sw-link-txt" value="http://i.senguo.cc/discount/{{shop_code}}?action=detail" disabled="">
                                 <input type="button" class="sw-link-copy" value="复制链接">
                             </div>
                             <div class="wrap-er group">
                                 <img class="er-logo" src="/static/images/favicon.ico" alt="">
                                 <div class="er-text lh80 fl">链接二维码</div>
-                                <div class="er-img fl er-code-img" title="http://senguo.cc/discount/{{shop_code}}?action=detail"></div>
+                                <div class="er-img fl er-code-img" title="http://i.senguo.cc/discount/{{shop_code}}?action=detail"></div>
                             </div>
                         </div>
                     </td>
