--- a/senguo.cc/admin/templates/admin/comment.html
+++ b/senguo.cc/admin/templates/admin/comment.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="col-md-3">
                             <p class="text-primary">
-                                <a href="{{reverse_url('adminSearchOrder')}}?action=order&&id={{comment[2]}}" target="_blank">订单号：<span class="order_id">{{comment[2]}}</span></a>
+                                <a href="{{reverse_url('adminSearchOrder')}}?action=order&&wd={{comment[2]}}" target="_blank">订单号：<span class="order_id">{{comment[2]}}</span></a>
                             </p>
                         </div>
                         <div class="col-md-4">
