--- a/senguo.cc/admin/templates/admin/shop-wx-set.html
+++ b/senguo.cc/admin/templates/admin/shop-wx-set.html
@@ -12,11 +12,11 @@
 	    <li class="item clearfix">
 	    	<a href="{{reverse_url('BbsDetail',21)}}" target="_blank" class="pull-right mt30">查看模板添加详细教程</a>
 	    	<div class="clearfix">
-	      		<p class="tit">第一步：进入微信公众平台后台，点击页面左下方的“开发者中心”进行如下操作：</p>
-	      		<p class="text-grey2 ml40">1. 在“开发者中心”的“配置项”选项下，找到“接口权限表”板块下的“网页服务”类目；</p>
-	      		<p class="text-grey2 ml40">2. 点击“网页服务”类目中第一项“网页授权获取用户基本信息”后面的修改按钮；</p>
-	      		<p class="text-grey2 ml40">3. 在弹出的对话框中填入链接“auth.senguo.cc”（不包含引号），并点击“确定”按钮。</p>
-                <p class="text-pink ml40">注意：以上步骤请务必正确执行，如果链接设置错误，所有用户将无法正常登录您的森果店铺。</p>
+	      		<p class="tit">第一步：进入微信公众平台后台，点击页面左下方的『开发者中心』进行如下操作：</p>
+	      		<p class="text-grey2 ml40">1. 在『开发者中心』的『配置项』选项下，找到『接口权限表』板块下的『网页服务』类目；</p>
+	      		<p class="text-grey2 ml40">2. 点击『网页服务』类目中第一项『网页授权获取用户基本信息』后面的『修改』按钮；</p>
+	      		<p class="text-grey2 ml40">3. 在弹出的对话框中填入链接“auth.senguo.cc”（不包含引号），并点击『确定』按钮。</p>
+                <p class="text-pink ml40">注意：请务必设置正确的链接，否则所有用户将无法正常登录您的森果店铺。</p>
 	      	</div>
 	    </li>
 	     <li class="item clearfix">
@@ -26,7 +26,7 @@
 	      		<p class="text-grey2 ml40">微信公众号名称：<span class="name">{{current_shop.admin.mp_name}}</span></p>
 	      		<p class="text-grey2 ml40">AppID：<span class="id">{{current_shop.admin.mp_appid}}</span></p>
 	      		<p class="text-grey2 ml40">AppSecret：<span class="secret">{{current_shop.admin.mp_appsecret}}</span></p>
-                <p class="text-pink ml40">AppID、AppSecret请在微信公众平台后台的“开发者中心”查看</p>
+                <p class="text-pink ml40">提示：AppID、AppSecret请在微信公众平台后台的『开发者中心』查看</p>
 	      	</div>
 	    </li>
 	</ul>
