--- a/senguo.cc/admin/templates/admin/shop-wx-set.html
+++ b/senguo.cc/admin/templates/admin/shop-wx-set.html
@@ -4,9 +4,15 @@
 	{% if _shop_auth ==0 %}
 	<h4 class="mt20">您还未进行店铺认证，暂不能使用该功能，<a href="{{reverse_url('adminShopAuth')}}">点击进行店铺认证</a></h4>
 	{% else %}
-	<div class="set-description">
-	    <p>如果您有已认证的微信服务号，则可开通订单微信通知。开通后的公众号具有订单模板消息通知功能。</p>
-	    <p>订单微信通知包括：管理员新订单通知、用户已下单通知、配送员新订单通知等。</p>
+	<div class="edit-box bg-greyf9 group">
+	    <div class="mode action-mode mp_active pull-right mt10" data-flag="on" title="点击切换状态" data-status="{{current_shop.admin.has_mp}}">
+	        <a class="work-mode" href="javascript:;" style="display:none;">已启用<span class="circle"></span></a>
+	        <a class="stop-mode" href="javascript:;" style="display:none;">未启用<span class="circle"></span></a>
+	    </div>
+	    <div class="wrap-pay-txt">
+	        <p>如果您有已认证的微信服务号，则可开通订单微信通知。开通后的公众号具有订单模板消息通知功能。</p>
+	    	<p>订单微信通知包括：管理员新订单通知、用户已下单通知、配送员新订单通知等。</p>
+	    </div>
 	</div>
 	<ul class="info-set-list mt20 font14">
 	    <li class="item clearfix">
