--- a/senguo.cc/admin/templates/m-admin/goods-edit.html
+++ b/senguo.cc/admin/templates/m-admin/goods-edit.html
@@ -158,9 +158,9 @@
                     <span class="add-right nodownm">
                         <div class="wrap-mark-set wrap-buylimit" data-id="{{data['buylimit']}}">
                             <span class="mark-choose w24" data-id="0">无</span>
-                            <span class="mark-choose" data-id="1">仅限新用户</span>
-                            <span class="mark-choose" data-id="2">仅限老用户</span>
-                            <span class="mark-choose" data-id="3">仅限充值用户</span>
+                            <span class="mark-choose" data-id="1">限新用户</span>
+                            <span class="mark-choose" data-id="2">限老用户</span>
+                            <span class="mark-choose" data-id="3">限充值用户</span>
                         </div>
                     </span>
                 </div>
