--- a/senguo.cc/admin/static/m-admin/css/main.css
+++ b/senguo.cc/admin/static/m-admin/css/main.css
@@ -399,7 +399,7 @@
 .wrap-more-set{position: relative;}
 .num-ipt{border: 1px solid #48b6a4;height: 24px;line-height: 24px;width:44px;text-align: center;color: #333;border-radius: 4px;position: absolute;left: 0;top: 3px;-webkit-box-sizing: border-box;}
 .num-info{color: #999;font-size: 12px;padding-left: 60px;line-height: 16px;}
-.wrap-mark-set>span{display: inline-block;padding:0 2px;font-size: 12px;color: #999;border-radius: 4px;border: 1px solid #999;-webkit-box-sizing: border-box;text-align: center;height:26px;line-height: 26px;}
+.wrap-mark-set>span{display: inline-block;padding:0 2px;font-size: 12px;color: #999;border-radius: 4px;border: 1px solid #999;-webkit-box-sizing: border-box;text-align: center;height:26px;line-height: 26px;min-width: 40px;}
 .wrap-mark-set .w24{width: 24px;}
 .wrap-mark-set .active{color: #fff;background-color: #48b6a4;border: none;border: 1px solid #48b6a4;}
 .text-dent{text-indent: 58px;}
